# diglife

./: .env  404.html  Dockerfile  README.md  docker-compose.yml  index.html  main.py  mkdocs.yml  pyproject.toml  requirements.txt
notebook/: test.ipynb  test1.ipynb  test22.ipynb  提示词调试.ipynb  鸟群算法.ipynb
src/diglife/: __init__.py  config.yaml  core.py  embedding_model.py  embedding_pool.py  log.py  models.py  prompt.py  server.py  tttt.py  utils.py
src/diglife.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/diglife/core/: __init__.py  biography.py  chat.py  digital_avatar.py  memorycard.py  utils.py
src/diglife/core/recommended/: __init__.py  embedding_pool.py  recom.py  redis_.py
src/diglife/server/: __main__.py  models.py
src/diglife/server/router/: biography.py  chat.py  chat_models.py  digital_avatar.py  memory_card.py  optimize.py  prompt.py  recommended.py
tests/: celery_worker.py  config.py  main.py  test.py  test_1.py  test_main.py  test_redis.py
tests/demo/: dongsheng.py
