[project]
name = "diglife"
version = "0.1.3"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [ "anyio>=4.10.0", "fastapi>=0.116.1", "llmada>=1.0.6", "pytest>=8.4.2", "pytest-asyncio>=1.1.0", "pytest-tornasync>=0.6.0.post2", "uvicorn>=0.35.0",]

[tool.setuptools.package-data]
diglife = [ "config.yaml",]

[tool.pytest.ini_options]
testpaths = [ "tests",]
pythonpath = [ "src",]
