[project]
name = "diglife"
version = "0.1.11"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [ "anyio>=4.10.0", "fastapi>=0.116.1", "llama-index>=0.12.30", "llama-index-vector-stores-qdrant==0.6.1", "llmada>=1.0.6", "prompt-writing-assistant>=0.1.6", "pytest>=8.4.2", "pytest-asyncio>=1.1.0", "pytest-tornasync>=0.6.0.post2", "qdrant-client>=1.15.1", "uvicorn>=0.35.0", "volcengine-python-sdk==4.0.6",]

[tool.setuptools.package-data]
diglife = [ "config.yaml",]

[tool.pytest.ini_options]
testpaths = [ "tests",]
pythonpath = [ "src",]

[tool.uv.sources.prompt-writing-assistant]
path = "../prompt_writing_assistant/dist/prompt_writing_assistant-0.1.8-py3-none-any.whl"

[tool.uv.sources.llmada]
path = "../llmada/dist/llmada-1.0.7-py3-none-any.whl"
